<resources>
    <string name="app_name">GAMES LOGGER</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="etLogin">login</string>
    <string name="etPassword">Password</string>
    <string name="cbConectado">Keep Connected</string>
    <string name="btLogin">Login</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="game_name">Game name</string>
    <string name="save">Save</string>
    <string name="menu_exluir">Delete</string>
    <string name="edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="info_developer">Developed by Danilo Pereira</string>
    <string name="info_app_version">Version 1.0.0</string>
    <string name="create_game_log">Create Game Log</string>
    <string name="view_games">View Games</string>
    <string name="info">Info</string>
    <string name="exit">Exit</string>
    <string name="cover_tip">Click on image to set a cover</string>
</resources>
